[package]
name = "VkRender"
version = "0.1.0"
authors = ["Atri"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.0"
ash-window = "0.6.0"
winit = "0.24.0"
gpu-allocator = "0.6.0"
shaderc = "0.7"
spirv-reflect = "0.2.3"

log = "0.4.14"
crossterm = "0.19.0"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"